api/src/main/java/com/example/sideporoject/commom/error/ErrorCodeIfs.java
package com.example.sideporoject.commom.error;

public interface ErrorCodeIfs {

    Integer getHttpStatusCode();
    Integer getErrorCode();
    String getErrorDescription();
}
